--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
+    "date-fns": "^4.1.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
