--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
